--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -79,7 +79,7 @@ Voor informatie, bestellingen of een vrijblijvende offerteaanvraag
       <div class="col-lg-6 text-center">
             <h1 class="blue py-4 text-center">Contactgegevens</h1>
             <p>Wil je ons atelier bezoeken? Maak dan gerust een afspraak via ons contactformulier<br>
-Of u kunt een mail sturen naar: <br>
+Of je kunt een mail sturen naar: <br>
 <p class="py-3"><strong>passiermuziekemmen@gmail.com</strong></p>
 Passier Muziek Emmen <br>
 Ermerweg 106 <br>
@@ -135,7 +135,7 @@ Ermerweg 106 <br>
           <div class="mt-4 m-auto text-center f1 f3">
             <!--<p class="p1 my-4">Passier muziek Emmen</p>-->
             <h1 class="h3"><img src="../img/passier.png" width="35%" height="35%" alt=""></h1>
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright &copy; 2018 - <a href="/privacy">Privacy policy</a></p>
             <!--<button class="btn btn-primary-custom text-white my-2" data-toggle="modal" data-target="#contactModal">Neem contact op</button>-->
             <p class="signature"><em>Gebouwd door: <a href="https://3dwebdevelopment.com">3D Web Development</a></em></p>
           </div>
