--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="../img/icon.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -77,7 +78,7 @@ Ook leveren wij alle gerenomeerde merken muziekinstrumenten & accesoires.
                         <div class="d-flex flex-row">
                             <div class="p-4 text-light align-self-start animated fadeIn _3" data-wow-delay="0.90s">
                                 <!--<i class="fa fa-circle"></i>-->
-Zowel nieuw als gebruikt, voor een perfect instrument bent u bij ons op het juiste adres. 
+Zowel nieuw als gebruikt, voor een perfect instrument ben je bij ons op het juiste adres. 
 Kom gerust eens langs voor een goed en eerlijk advies op maat.
                             </div>
                         </div>
@@ -116,11 +117,11 @@ Kom gerust eens langs voor een goed en eerlijk advies op maat.
         <!--  </p>-->
         </div>
         <div class="col-md-4 ">
-          <p class="text-center p1"></p>
+          <p class="text-center"></p>
           <div class="mt-4 m-auto text-center f1 f3">
             <!--<p class="p1 my-4">Passier muziek Emmen</p>-->
             <h1 class="h3"><img src="../img/passier.png" width="35%" height="35%" alt=""></h1>
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright &copy; 2018 - <a href="/privacy">Privacy policy</a></p>
             <!--<button class="btn btn-primary-custom text-white my-2" data-toggle="modal" data-target="#contactModal">Neem contact op</button>-->
             <p class="signature"><em>Gebouwd door: <a href="https://3dwebdevelopment.com">3D Web Development</a></em></p>
           </div>
