--- a/views/onderhoud.ejs
+++ b/views/onderhoud.ejs
@@ -62,7 +62,7 @@ Wij zijn gespecialiseerd in het repareren en onderhouden van uw blaasinstrument.
                         <div class="d-flex flex-row">
                             <div class="p-4 text-light pverkoop align-self-start animated _2 fadeInLeftBig" data-wow-delay="1s">
                                 <!--<i class="fa fa-circle"></i>-->
-    Neem nu een onderhoudscontract en u bent een jaar lang verzekerd van een 'goed afgesteld' instrument.
+    Neem nu een onderhoudscontract en je bent een jaar lang verzekerd van een 'goed afgesteld' instrument.
                         </div>
                     </div>
                      <div class="d-flex flex-row mb-5">
@@ -239,7 +239,7 @@ Wij zijn gespecialiseerd in het repareren en onderhouden van uw blaasinstrument.
           <div class="mt-4 m-auto text-center f1 f3">
             <!--<p class="p1 my-4">Passier muziek Emmen</p>-->
             <h1 class="h3"><img src="../img/passier.png" width="35%" height="35%" alt=""></h1>
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright &copy; 2018 - <a href="/privacy">Privacy policy</a></p>
             <!--<button class="btn btn-primary-custom text-white my-2" data-toggle="modal" data-target="#contactModal">Neem contact op</button>-->
             <p class="signature"><em>Gebouwd door: <a href="https://3dwebdevelopment.com">3D Web Development</a></em></p>
           </div>
