--- a/views/verhuur.ejs
+++ b/views/verhuur.ejs
@@ -76,13 +76,13 @@
     <p class="pt-5 mx-5 p-verhuur">Wij hebben een groot assortiment blaasinstrumenten beschikbaar voor verhuur. 
 Zowel nieuwe als gebruikte instrumenten worden aangeboden om voor een bepaalde tijd te huren. 
 De huurtermijn voor nieuwe instrumenten is minimaal 1 jaar. 
-Voor gebruikte instrumenten zie onderstaande tabel:</p>
+Voor gebruikte instrumenten is een kortere huurtermijn mogelijk, zie onderstaande tabellen:</p>
  <div class="accordion my-5" id="accordionExample">
   <div class="card light-blue-bg1">
     <div class="card-header blue-bg1" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link text-light" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          Nieuwe instrumenten  <i class="fas fa-arrow-circle-down"></i>
+      <h5 class="mb-0 text-light">
+        <!--<button class="btn btn-link text-light" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">-->
+          Gebruikte instrumenten  
 
 
         </button>
@@ -91,7 +91,7 @@ Voor gebruikte instrumenten zie onderstaande tabel:</p>
     
     <p></p>
 
-    <div id="collapseOne" class="collapse show col-xs-12" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <!--<div id="collapseOne" class="collapse show col-xs-12" aria-labelledby="headingOne" data-parent="#accordionExample">-->
       <div class="card-body table-responsive">
 <table class="table">
   <thead>
@@ -146,14 +146,12 @@ Voor gebruikte instrumenten zie onderstaande tabel:</p>
   <div class="card">
     <div class="card-header blue-bg1" id="headingTwo">
       <h5 class="mb-0 text-light">
-        <button class="btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          Gebruikte instrumenten  <i class="fas fa-arrow-circle-down"></i>
-
-
+        <!--<button class="btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">-->
+          Nieuwe instrumenten  
         </button>
       </h5>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+    <!--<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">-->
       <div class="card-body light-blue-bg1">
 <table class="table">
   <thead>
@@ -224,7 +222,7 @@ Voor gebruikte instrumenten zie onderstaande tabel:</p>
           <div class="mt-4 m-auto text-center f1 f3">
             <!--<p class="p1 my-4">Passier muziek Emmen</p>-->
             <h1 class="h3"><img src="../img/passier.png" width="35%" height="35%" alt=""></h1>
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright &copy; 2018 - <a href="/privacy">Privacy policy</a></p>
             <!--<button class="btn btn-primary-custom text-white my-2" data-toggle="modal" data-target="#contactModal">Neem contact op</button>-->
             <p class="signature"><em>Gebouwd door: <a href="https://3dwebdevelopment.com">3D Web Development</a></em></p>
           </div>
