--- a/views/verkoop.ejs
+++ b/views/verkoop.ejs
@@ -86,30 +86,33 @@
                     </div>
     <div class="card-group py-5 bg-eme">
   <div class="card m-4 card-verkoop animated _3 fadeIn" data-wow-delay="0.5s">
-    <img class="card-img-top" src="https://www.matthewsmuziek.nl/media/catalog/product/cache/1/small_image/400x/9df78eab33525d08d6e5fb8d27136e95/k/e/keilwerth_jk1300-8_0.jpg" alt="Card image cap">
+    <img class="card-img-top" src="../img/yas.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
+      <h5 class="card-title text-muted">Altosaxofoon</h5>
       <h5 class="card-title">  Yamaha YAS-32  	</h5>
       <p class="card-text">Demo model! Zo goed als nieuw!<br> Voor meer informatie neem je contact op.</p>
       <p class="card-text text-muted">€825,-</p>
-            <button class="btn btn-primary-custom text-white" data-toggle="modal" data-target="#contactModal">Neem contact op</button>
+            <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
   <div class="card m-4 card-verkoop animated _4 fadeIn" data-wow-delay="1s">
-    <img class="card-img-top" src="https://static.bax-shop.es/image/product/59197/173999/56b9e161/450x450/Purcell_SAX-AL-alt-saxofoon.jpg" alt="Card image cap">
+    <img class="card-img-top" src="../img/swingplanck.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
-      <h5 class="card-title">Springplank</h5>
+      <h5 class="card-title text-muted">Altosaxofoon</h5>
+      <h5 class="card-title">Swingplanck</h5>
       <p class="card-text">Een zeer goede saxofoon voor de beginnende muzikant.<br> Voor meer informatie neem je contact op.</p>
       <p class="card-text text-muted">€395,-</p>
-      <button class="btn btn-primary-custom text-white" data-toggle="modal" data-target="#contactModal">Neem contact op</button>
+      <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
   <div class="card m-4 card-verkoop animated _5 fadeIn" data-wow-delay="1.5s">
-    <img class="card-img-top" src="https://d1aeri3ty3izns.cloudfront.net/media/26/269198/1200/preview.jpg" alt="Card image cap">
+    <img class="card-img-top" src="../img/markvi.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
+      <h5 class="card-title text-muted">  Sopraansaxofoon  	</h5>
       <h5 class="card-title">  Selmer Mark VI  	</h5>
-      <p class="card-text">Lorem ipsum dolor sit amet,  sed voluptas ad nesciunt!<br> Voor meer informatie neem je contact op. </p>
+      <p class="card-text">  nr. 290724 1979  <br> Voor meer informatie neem je contact op. </p>
       <p class="card-text text-muted">€3200,-</p>
-      <button class="btn btn-primary-custom text-white" data-toggle="modal" data-target="#contactModal">Neem contact op</button>
+      <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
 </div>
@@ -141,7 +144,7 @@
           <div class="mt-4 m-auto text-center f1 f3">
             <!--<p class="p1 my-4">Passier muziek Emmen</p>-->
             <h1 class="h3"><img src="../img/passier.png" width="35%" height="35%" alt=""></h1>
-            <p>Copyright &copy; 2018</p>
+            <p>Copyright &copy; 2018 - <a href="/privacy">Privacy policy</a></p>
             <!--<button class="btn btn-primary-custom text-white my-2" data-toggle="modal" data-target="#contactModal">Neem contact op</button>-->
             <p class="signature"><em>Gebouwd door: <a href="https://3dwebdevelopment.com">3D Web Development</a></em></p>
           </div>
