--- a/views/onderhoud.ejs
+++ b/views/onderhoud.ejs
@@ -159,52 +159,52 @@ Wij zijn gespecialiseerd in het repareren en onderhouden van uw blaasinstrument.
   </thead>
   <tbody>
     <tr>
-      <th scope="row" >Eb Cornet</th>
-      <td>€75,-</td>
-    </tr>
-    <tr>
-      <th scope="row" class="light-blue-bg">Eb Trompet</th>
+      <th scope="row" class="light-blue-bg" >Eb Cornet</th>
       <td class="light-blue-bg">€75,-</td>
     </tr>
     <tr>
-      <th scope="row">Bugel</th>
+      <th scope="row" >Eb Trompet</th>
       <td>€75,-</td>
     </tr>
     <tr>
-      <th scope="row" class="light-blue-bg">Trompet</th>
+      <th scope="row" class="light-blue-bg">Bugel</th>
       <td class="light-blue-bg">€75,-</td>
     </tr>
     <tr>
-      <th scope="row">Hoorn</th>
-      <td>€100,-</td>
+      <th scope="row" >Trompet</th>
+      <td>€75,-</td>
     </tr>
     <tr>
-      <th scope="row" class="light-blue-bg">Bariton</th>
-      <td class="light-blue-bg">€95,-</td>
+      <th scope="row" class="light-blue-bg">Hoorn</th>
+      <td class="light-blue-bg">€100,-</td>
     </tr>
     <tr>
-      <th scope="row">Tenor Hoorn</th>
-      <td>€100,-</td>
+      <th scope="row" >Bariton</th>
+      <td>€95,-</td>
     </tr>
     <tr>
-      <th scope="row" class="light-blue-bg">Euphonium</th>
-      <td class="light-blue-bg">€95,-</td>
+      <th scope="row" class="light-blue-bg">Tenor Hoorn</th>
+      <td class="light-blue-bg">€100,-</td>
     </tr>
     <tr>
-      <th scope="row">Trombone</th>
+      <th scope="row" >Euphonium</th>
+      <td>€95,-</td>
+    </tr>
+    <tr>
+      <th scope="row" class="light-blue-bg">Trombone</th>
+      <td class="light-blue-bg" class="light-blue-bg">€90,-</td>
+    </tr>
+    <tr>
+      <th scope="row" >Bas Trombone</th>
       <td>€90,-</td>
     </tr>
     <tr>
-      <th scope="row" class="light-blue-bg">Bas Trombone</th>
-      <td class="light-blue-bg">€90,-</td>
-    </tr>
-    <tr>
-      <th scope="row">Bastuba</th>
-      <td>€140,-</td>
-    </tr>
-    <tr>
-      <th scope="row" class="light-blue-bg">Sousafoon</th>
+      <th scope="row" class="light-blue-bg">Bastuba</th>
       <td class="light-blue-bg">€140,-</td>
+    </tr>
+    <tr>
+      <th scope="row" >Sousafoon</th>
+      <td>€140,-</td>
     </tr>
   </tbody>
 </table>
