--- a/views/verhuur.ejs
+++ b/views/verhuur.ejs
@@ -79,8 +79,8 @@ De huurtermijn voor nieuwe instrumenten is minimaal 1 jaar.
 Voor gebruikte instrumenten is een kortere huurtermijn mogelijk, zie onderstaande tabellen:</p>
  <div class="accordion my-5" id="accordionExample">
   <div class="card light-blue-bg1">
-    <div class="card-header blue-bg1" id="headingOne">
-      <h5 class="mb-0 text-light">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0 blue">
         <!--<button class="btn btn-link text-light" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">-->
           Gebruikte instrumenten  
 
@@ -144,8 +144,8 @@ Voor gebruikte instrumenten is een kortere huurtermijn mogelijk, zie onderstaand
     </div>
   </div>
   <div class="card">
-    <div class="card-header blue-bg1" id="headingTwo">
-      <h5 class="mb-0 text-light">
+    <div class="card-header" id="headingTwo">
+      <h5 class="mb-0 blue">
         <!--<button class="btn btn-link collapsed text-light" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">-->
           Nieuwe instrumenten  
         </button>
