--- a/views/verkoop.ejs
+++ b/views/verkoop.ejs
@@ -85,7 +85,7 @@
                         </div>
                     </div>
     <div class="card-group py-5 bg-eme">
-  <div class="card m-4 card-verkoop animated _3 fadeIn" data-wow-delay="0.5s">
+  <div class="card card1 m-4 card-verkoop animated _3 fadeIn" data-wow-delay="0.5s">
     <img class="card-img-top" src="../img/yas.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
       <h5 class="card-title text-muted">Altosaxofoon</h5>
@@ -95,7 +95,7 @@
             <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
-  <div class="card m-4 card-verkoop animated _4 fadeIn" data-wow-delay="1s">
+  <div class="card card1 m-4 card-verkoop animated _4 fadeIn" data-wow-delay="1s">
     <img class="card-img-top" src="../img/swingplanck.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
       <h5 class="card-title text-muted">Altosaxofoon</h5>
@@ -105,7 +105,7 @@
       <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
-  <div class="card m-4 card-verkoop animated _5 fadeIn" data-wow-delay="1.5s">
+  <div class="card card1 m-4 card-verkoop animated _5 fadeIn" data-wow-delay="1.5s">
     <img class="card-img-top" src="../img/markvi.jpeg" alt="Card image cap">
     <div class="card-body mt-auto">
       <h5 class="card-title text-muted">  Sopraansaxofoon  	</h5>
