--- a/views/bedankt.ejs
+++ b/views/bedankt.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="../img/icon.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +18,7 @@
 
 </head>
 <body id="home">
-  <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+  <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
     <div class="container">
       <img src="../img/passier.png"  class="img-fluid" alt="" height="42px" width="165">
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -79,7 +80,7 @@ Uw bericht is verzonden.
       <div class="col-lg-6 text-center">
             <h1 class="blue py-4 text-center">Contactgegevens</h1>
             <p>Wil je ons atelier bezoeken? Maak dan gerust een afspraak via ons contactformulier<br>
-Of u kunt een mail sturen naar: <br>
+Of je kunt een mail sturen naar: <br>
 <p class="py-3"><strong>passiermuziekemmen@gmail.com</strong></p>
 Passier Muziek Emmen <br>
 Ermerweg 106 <br>
@@ -98,6 +99,10 @@ Ermerweg 106 <br>
   <div class="form-group">
     <label for="exampleFormControlInput1">Emailadres</label>
     <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="Uw emailadres">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Onderwerp</label>
+    <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="Uw onderwerp">
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Bericht</label>
