--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -186,7 +186,7 @@ body{
 }
 
 .card-verkoop{
-    box-shadow: 5px 5px 3px #898888!important;
+    box-shadow: 0px 30px 60px rgba(0,0,0,0.5)!important;
     background: rgba(255,255,255,1)!important;
 }
 
