--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/icon.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +18,7 @@
 
 </head>
 <body id="home">
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container">
       <img src="../img/passier.png"  class="img-fluid" alt="" height="42px" width="165">
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -100,6 +101,10 @@ Ermerweg 106 <br>
     <input type="email" class="form-control" name="email" id="exampleFormControlInput1" placeholder="Uw emailadres">
   </div>
   <div class="form-group">
+    <label for="exampleFormControlInput1">Onderwerp</label>
+    <input type="email" class="form-control" name="ondw" id="exampleFormControlInput1" placeholder="Uw onderwerp">
+  </div>
+  <div class="form-group">
     <label for="exampleFormControlTextarea1">Bericht</label>
     <textarea class="form-control" name="bericht" id="exampleFormControlTextarea1" rows="3" placeholder="Uw bericht hier"></textarea>
   </div>
@@ -175,6 +180,10 @@ Ermerweg 106 <br>
             </div>
             <div class="form-group">
               <label for="email">Email</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="onderwerp">Onderwerp</label>
               <input type="text" class="form-control">
             </div>
             <div class="form-group">
