--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 
 </head>
 <body id="home">
-  <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
+  <nav class="navbar navbar-expand-md  navbar-light fixed-top">
     <div class="container">
       <img src="../img/passier.png"  class="img-fluid" alt="" height="42px" width="165">
       <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarCollapse">
