--- a/views/onderhoud.ejs
+++ b/views/onderhoud.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/icon.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +18,7 @@
 
 </head>
 <body id="home">
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top">
+  <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container">
       <img src="../img/passier.png"  class="img-fluid" alt="" height="42px" width="165">
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
