--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -102,7 +102,7 @@ Ermerweg 106 <br>
   </div>
   <div class="form-group">
     <label for="exampleFormControlInput1">Onderwerp</label>
-    <input type="email" class="form-control" name="ondw" id="exampleFormControlInput1" placeholder="Uw onderwerp">
+    <input type="text" class="form-control" name="ondw" id="exampleFormControlInput1" placeholder="Uw onderwerp">
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Bericht</label>
