--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -51,12 +51,9 @@ Passier Muziek emmen neemt [wel / niet] op basis van geautomatiseerde verwerking
 
 Hoe lang we persoonsgegevens bewaren
 
-Passier Muziek emmen bewaart je persoonsgegevens niet langer dan strikt nodig is om de doelen te realiseren waarvoor je gegevens worden verzameld. Wij hanteren de volgende bewaartermijnen voor de volgende (categorieën) van persoonsgegevens:
+Passier Muziek emmen bewaart je persoonsgegevens niet langer dan strikt nodig is om de doelen te realiseren waarvoor je gegevens worden verzameld. Wij hanteren de volgende bewaartermijnen voor de volgende van persoonsgegevens:
 
-(Categorie) persoonsgegevens  > Bewaartermijn > Reden
-Personalia                                  > Bewaartermijn > Reden                         
-Adres                                          > Bewaartermijn > Reden
-Enzovoort                                   > Bewaartermijn > Reden 
+
 
 
 Delen van persoonsgegevens met derden
@@ -72,7 +69,7 @@ Je hebt het recht om je persoonsgegevens in te zien, te corrigeren of te verwijd
 
 Je kunt een verzoek tot inzage, correctie, verwijdering, gegevensoverdraging van je persoonsgegevens of verzoek tot intrekking van je toestemming of bezwaar op de verwerking van jouw persoonsgegevens sturen naar passiermuziek@gmail.com.
 
-Om er zeker van te zijn dat het verzoek tot inzage door jou is gedaan, vragen wij jou een kopie van je identiteitsbewijs met het verzoek mee te sturen. Maak in deze kopie je pasfoto, MRZ (machine readable zone, de strook met nummers onderaan het paspoort), paspoortnummer en Burgerservicenummer (BSN) zwart. Dit ter bescherming van je privacy. We reageren zo snel mogelijk, maar binnen vier weken, op jouw verzoek .
+Om er zeker van te zijn dat het verzoek tot inzage door jou is gedaan, vragen wij jou een kopie van je identiteitsbewijs met het verzoek mee te sturen. Maak in deze kopie je pasfoto, MRZ (machine readable zone, de strook met nummers onderaan het paspoort), paspoortnummer en Burgerservicenummer  zwart. Dit ter bescherming van je privacy. We reageren zo snel mogelijk, maar binnen vier weken, op jouw verzoek .
 
 Passier Muziek emmen wil je er tevens op wijzen dat je de mogelijkheid hebt om een klacht in te dienen bij de nationale toezichthouder, de Autoriteit Persoonsgegevens. Dat kan via de volgende link: https://autoriteitpersoonsgegevens.nl/nl/contact-met-de-autoriteit-persoonsgegevens/tip-ons
 
