--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -44,7 +44,7 @@ Passier Muziek emmen verwerkt jouw persoonsgegevens voor de volgende doelen:
 
 
 Geautomatiseerde besluitvorming
-Passier Muziek emmen neemt [wel / niet] op basis van geautomatiseerde verwerkingen besluiten over zaken die (aanzienlijke) gevolgen kunnen hebben voor personen. Het gaat hier om besluiten die worden genomen door computerprogramma's of -systemen, zonder dat daar een mens (bijvoorbeeld een medewerker van Passier Muziek emmen) tussen zit. Passier Muziek emmen gebruikt de volgende computerprogramma's of -systemen:
+Passier Muziek emmen neemt niet op basis van geautomatiseerde verwerkingen besluiten over zaken die (aanzienlijke) gevolgen kunnen hebben voor personen. Het gaat hier om besluiten die worden genomen door computerprogramma's of -systemen, zonder dat daar een mens (bijvoorbeeld een medewerker van Passier Muziek emmen) tussen zit. Passier Muziek emmen gebruikt de volgende computerprogramma's of -systemen:
 
 [aanvullen met naam van het systeem, waarom het gebruikt wordt, onderliggende logica, belang en verwachte gevolgen voor betrokkene]
 
