--- a/views/verkoop.ejs
+++ b/views/verkoop.ejs
@@ -106,16 +106,16 @@
       <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
     </div>
   </div>
-  <div class="card card1 m-4 card-verkoop animated _5 fadeIn" data-wow-delay="1.5s">
-    <img class="card-img-top" src="../img/markvi.jpeg" alt="Card image cap">
-    <div class="card-body mt-auto">
-      <h5 class="card-title text-muted">  Sopraansaxofoon  	</h5>
-      <h5 class="card-title">  Selmer Mark VI  	</h5>
-      <p class="card-text">  nr. 290724 1979  <br> Voor meer informatie neem je contact op. </p>
-      <p class="card-text text-muted">€3200,-</p>
-      <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>
-    </div>
-  </div>
+  <!--<div class="card card1 m-4 card-verkoop animated _5 fadeIn" data-wow-delay="1.5s">-->
+  <!--  <img class="card-img-top" src="../img/markvi.jpeg" alt="Card image cap">-->
+  <!--  <div class="card-body mt-auto">-->
+  <!--    <h5 class="card-title text-muted">  Sopraansaxofoon  	</h5>-->
+  <!--    <h5 class="card-title">  Selmer Mark VI  	</h5>-->
+  <!--    <p class="card-text">  nr. 290724 1979  <br> Voor meer informatie neem je contact op. </p>-->
+  <!--    <p class="card-text text-muted">€3200,-</p>-->
+  <!--    <button class="btn btn-primary-custom text-white" ><a href="/contact" class="text-light">Neem contact op</a> </button>-->
+  <!--  </div>-->
+  <!--</div>-->
 </div>
     
     </div>
